--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,9 @@
 {
-    "name": "phalapi/qrcode",
-    "description": "PhalApi 2.x 扩展类库：基于QRCode实现的二维码扩展",
+    "name": "mucy/qrcode",
+    "description": "扩展类库：基于QRCode实现的二维码扩展",
     "type": "library",
-    "keywords": [
-        "phalapi", "phalapi-qrcode", "qrcode", "二维码"
-    ],
     "license": "GPL-3.0+",
     "minimum-stability": "dev",
-    "homepage": "https://www.phalapi.net/",
     "authors": [
         {
             "name": "dogstar huang",
@@ -18,7 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "PhalApi\\QrCode\\": "src"
+            "Mucy\\QrCode\\": "src"
         }
     } 
 }
